--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -221,6 +221,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="56dp"
+                android:layout_marginLeft="10dp"
                 android:text="upcomings"
                 android:textSize="19dp"
                 android:textAllCaps="true"
@@ -246,6 +247,8 @@
                         android:id="@+id/image"
                         android:layout_width="60dp"
                         android:layout_height="60dp"
+                        android:layout_alignParentStart="true"
+                        android:layout_marginStart="25dp"
                         android:layout_marginLeft="15dp"
                         android:src="@drawable/modified" />
 
